--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,6 +10,9 @@
         <li>
             <a href="/index.html">Assignment 1</a>
         </li>
+        <li>
+            <a href="assignment2/index.html">Assignment 2</a>
+        </li>
     </ul>
 </body>
 </html>
