--- a/public/assignment/assignment2/user/login.html
+++ b/public/assignment/assignment2/user/login.html
@@ -5,10 +5,15 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Login</title>
-    <link href="../../../vendor/bootstrap/css/bootstrap.min.css"
-          rel="stylesheet"/>
-    <link href="../css/style.css"
-          rel="stylesheet"/>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
+    <link rel="stylesheet"
+          href="../css/style.css">
 </head>
 <body>
 
