change two label elements to link

--- a/public/assignment/assignment2/widget/widget-chooser.html
+++ b/public/assignment/assignment2/widget/widget-chooser.html
@@ -72,7 +72,9 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-4 col-sm-7 col-xs-10">
-                    <span>Label</span>
+                    <a href="">
+                        Label
+                    </a>
                 </div>
                 <div class="col-md-3 visible-md visible-lg">
                     1/1/2017
@@ -130,7 +132,9 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-4 col-sm-7 col-xs-10">
-                    <span>Text input</span>
+                    <a href="">
+                        Text Input
+                    </a>
                 </div>
                 <div class="col-md-3 visible-md visible-lg">
                     1/1/2017
