--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="assignment2/index.html">Assignment 2</a>
         </li>
+        <li>
+            <a href="assignment3/index.html">Assignment 3</a>
+        </li>
     </ul>
 </body>
 </html>
