--- a/public/assignment/assignment3/home.html
+++ b/public/assignment/assignment3/home.html
@@ -37,7 +37,7 @@
             sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
         </p>
         <p><a class="btn btn-primary btn-lg"
-              href="views/user/templates/profile.view.client.html"
+              href=""
               role="button">Go to Profile &raquo;</a></p>
     </div>
 </div>
@@ -51,7 +51,7 @@
                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
                euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default"
-                  href="views/website/templates/website-list.view.client.html"
+                  href=""
                   role="button">Go to website list &raquo;</a></p>
         </div>
         <div class="col-md-4">
@@ -60,7 +60,7 @@
                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
                euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default"
-                  href="views/page/templates/page-list.view.client.html"
+                  href=""
                   role="button">Go to page list &raquo;</a></p>
         </div>
         <div class="col-md-4">
@@ -69,7 +69,7 @@
                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
                fermentum massa justo sit amet risus.</p>
             <p><a class="btn btn-default"
-                  href="views/widget/templates/widget-list.view.client.html"
+                  href=""
                   role="button">Go to widget list &raquo;</a></p>
         </div>
     </div>
