--- a/public/assignment/assignment4/index.html
+++ b/public/assignment/assignment4/index.html
@@ -42,7 +42,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Assignment3 Homepage</title>
+    <title>Assignment 4</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
