--- a/public/assignment/assignment4/directives/index.html
+++ b/public/assignment/assignment4/directives/index.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="wbdv-sortable.js"></script>
-    <script src="../app.js"></script>
+    <!--<script src="../app.js"></script>-->
 
     <meta charset="UTF-8">
     <title>Title</title>
