--- a/public/project/index.html
+++ b/public/project/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <h1>Project Home Page</h1>
+    <ul>
+
+        <li>
+            <a href="testYummly/index.html">Proof of Concept</a>
+        </li>
+    </ul>
 </body>
 </html>
