--- a/public/project/testYummly/index.html
+++ b/public/project/testYummly/index.html
@@ -8,7 +8,13 @@
 
     <meta charset="UTF-8">
     <title>Test Yummly</title>
+    <!--user-->
+    <script src="services/user.service.client.js"></script>
+    <script src="views/user/controllers/login.controller.client.js"></script>
+    <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/user/controllers/register.controller.client.js"></script>
 
+    <!--Yummly API-->
     <script src="services/yummly.service.client.js"></script>
     <script src="views/yummly/controller/search-yummly.controller.client.js"></script>
     <script src="views/yummly/controller/detail-yummly.controller.client.js"></script>
@@ -20,6 +26,7 @@
 
     <link rel="stylesheet"
           href="css/style.css">
+
 
 
 </head>
