add client side validation

--- a/public/assignment/assignment5/index.html
+++ b/public/assignment/assignment5/index.html
@@ -18,6 +18,9 @@
 
     <script src="views/home/main.controller.client.js"></script>
 
+    <!--admin controller-->
+    <script src="views/admin/admin-users.controller.client.js"></script>
+
     <!--user controller-->
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
