--- a/public/assignment/assignment5/index.html
+++ b/public/assignment/assignment5/index.html
@@ -16,11 +16,6 @@
     <script src="https://use.fontawesome.com/464c737455.js"></script>
     <script src="js/textAngular.min.js"></script>
 
-    <script src="views/home/main.controller.client.js"></script>
-
-    <!--admin controller-->
-    <script src="views/admin/admin-users.controller.client.js"></script>
-
     <!--user controller-->
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
@@ -62,6 +57,8 @@
 
     <!--<link href="vendor/bootstrap/css/bootstrap.css"-->
     <!--rel="stylesheet">-->
+    <link rel="stylesheet"
+          href="css/jumbotron.css">
     <link rel="stylesheet"
           href="css/textAngular.css">
     <link rel="stylesheet"
