--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -22,6 +22,9 @@
         <li>
             <a href="assignment5/index.html">Assignment 5</a>
         </li>
+        <li>
+            <a href="assignment6/index.html">Assignment 6</a>
+        </li>
     </ul>
 </body>
 </html>
