--- a/public/assignment/assignment6/index.html
+++ b/public/assignment/assignment6/index.html
@@ -16,10 +16,11 @@
     <script src="https://use.fontawesome.com/464c737455.js"></script>
     <script src="js/textAngular.min.js"></script>
 
-    <script src="views/home/main.controller.client.js"></script>
+    <!--homepage controller-->
+    <script src="views/home/controllers/main.controller.client.js"></script>
 
     <!--admin controller-->
-    <script src="views/admin/admin-users.controller.client.js"></script>
+    <!--<script src="views/admin/controllers/admin-users.controller.client.js"></script>-->
 
     <!--user controller-->
     <script src="views/user/controllers/login.controller.client.js"></script>
