--- a/public/project/testYummly/home.html
+++ b/public/project/testYummly/home.html
@@ -19,6 +19,7 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="">Home</a></li>
             <li><a href="#!/search">Search Yummly</a></li>
+            <li><a href="#!/search_ingred">Search Ingredient</a></li>
         </ul>
     </div><!--/.navbar-collapse -->
 </nav>
