--- a/public/project/testYummly/index.html
+++ b/public/project/testYummly/index.html
@@ -19,6 +19,9 @@
     <script src="views/yummly/controller/search-yummly.controller.client.js"></script>
     <script src="views/yummly/controller/detail-yummly.controller.client.js"></script>
 
+    <script src="services/edamam.service.client.js"></script>
+    <script src="views/yummly/controller/ingredient-detail.controller.client.js"></script>
+
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -26,8 +29,8 @@
 
     <link rel="stylesheet"
           href="css/style.css">
-
-
+    <link rel="stylesheet"
+          href="css/nutritionChart.css">
 
 </head>
 
